style.css
#index{
  background-color:white;
}

* {
  margin:0px;
  padding:0px;
  box-sizing:border-box;
}

body{
  background-color:#130624;
}

nav {
  display:flex;
  justify-content:space-around;
  align-items: center;
  min-height: 8vh;
  font-family: 'Bubblegum Sans', cursive;
  background-image: url('space3.jpg');
}

.navbar button, a {
  color: #e38ff7;
  text-decoration:none;
  letter-spacing:2px;
  font-size:11px;
  text-transform:uppercase;
  padding:5px;
}

/* The dropdown container */
.dropdown {
  float: left;
  overflow: hidden;
}

/* Dropdown button */
.dropdown .dropbtn {
  font-size: 16px;
  border: none;
  outline: none;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  font-family: inherit; /* Important for vertical align on mobile phones */
  margin: 0; /* Important for vertical align on mobile phones */
}

/* Add a red background color to navbar links on hover */
.navbar a:hover, .dropdown:hover .dropbtn, .dropdown .selected{
  background-color: purple;
}

/* Dropdown content (hidden by default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 3;
}

/* Links inside the dropdown */
.dropdown-content a {
  float: none;
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

/* Add a grey background color to dropdown links on hover */
.dropdown-content a:hover {
  background-color: #ddd;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
}

.logo {
  display:flex;
  align-items: center;
  justify-content: space-around;
}

.logo-img{
  width:37px;
  height:37px;
  display:flex;
  margin-right:10px;
  margin-bottom:4px;
  justify-content: space-around;
}

#logo {
  color: #fce8fc;
  text-transform: uppercase;
  letter-spacing: 4px;
  font-size:20px;
  display:flex;
  justify-content:space-around;
  align-items:center;
  text-decoration:none;
}

.burger{
  display:none;
}

.burger div{
  width: 25px;
  height:3px;
  background-color: #f0e4f7;
  margin:5px;
  transition: all 0.3s ease;
}

.extra{
  display:none;
}

@media screen and (max-width:1150px){
  .nav-links {
    display:flex;
    justify-content:space-around;
    width:70%;
  }
}

@media screen and (max-width:768px){
  body{
    overflow-x:hidden;
  }

  .main{
    width:50%;
    position:relative;
    left:5px;
  }

  .navbar {
    position:absolute;
    right:0px;
    height:100vh;
    top:8vh;
    background-image:url('space3.jpg');
    display:flex;
    flex-direction:column;
    align-items:center;
    width:40%;
    transform:translateX(100%);
    transition: transform 0.5s ease-in;
    justify-content: space-evenly;
  }
  .navbar a, button {
    font-size:14px;
    opacity: 0;
  }

  .burger{
    display:block;
    cursor:pointer;
  }
}

.nav-active{
  transform:translateX(0%);
}

@keyframes navLinkFade{
  from{
    opacity:0;
    transform:translateX(50px);
  }
  to{
    opacity:1;
    transform:translateX(0);
  }
}

@keyframes navLinkExtraFade{
  from{
    opacity:0;
  }
  to{
    opacity:1;
  }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

main{
  width:60%;
  display:block;
  position: relative;
  left:30px;
  background:white;
  /*border-radius: 13px;*/
  /*border-style: solid; */
  color: black;
  padding:10px;
  margin:10px;
  margin-top:20px;
  /*border-color: #e38ff7; */
}

main p, h1, h2{
  padding:7px;
}

main ul{
  padding:10px;
}


             /*POST STYLING*/


p{
  margin:5px;
}

h1, h2, h3{
  margin:9px;
}

main{
  width:70vw;
  background-color:#130624;
}

button{
  background-color:purple;
  border:none;
  color:white;
  padding: 15px 32px;
  margin:5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

#post1{
  margin-top:20;
}

.post{
  width:70vw;
  background-color:white;
  margin-top: 50;
}

.post a{
  text-decoration:none;
  color:hotpink;
}

.post a:hover{
  text-decoration:underline;
}

#trig, #complex, #prob, #conclusion{
  display: none;
}

#vecs, #vecs-notation, #props, #ops, #decomp, #general, #form, #transp, #dot, #norm, #conjtransp,
#complex_dot, #lin_comb, #matrix_intro, #notation_form, #matrix_ops, #matrix_transps, #id_inv,
#systs, #conclusion2{
  display:none;
}

#post4_2, #post4_3, #post4_4, #post4_5, #post4_6, #post4_7, #post4_8, #post4_9, #post4_10, #post4_11, #post4_12{
  display:none;
}

#post5_2, #post5_3, #post5_4, #post5_5, #post5_6, #post5_7, #post5_8{
  display:none;
}

#post6_2, #post6_3, #post6_4, #post6_5, #post6_6{
  display:none;
}

a.download-btn{
  font-weight:bold;
  color:purple;
  background-color:white;
  border-radius:4px;
  border:1px solid;
  box-shadow:4px 8px rgba(128,0,128, 0.4);
  padding:8px;
  position:absolute;
  bottom:22px;
}

.g-signin2{
  display:none;
}

.footer{
  position:fixed;
  bottom:0;
  left:0;
  width:100%;
  text-align:center;
  background-color:#9253f2;
  padding:5px;
  min-height:24px;
}

.footer a{
  color:white;
  font-size:16px;
}

